--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
                         </div>
                         <div class="col-12 col-lg-6 wp-2">
                             <div class="box my-3">
-                                <i class="fab fa-figma"></i><p class="d-inline mx-2">Figam</p>
+                                <i class="fab fa-figma"></i><p class="d-inline mx-2">Figma</p>
                                 <div class="progress">
                                     <div class="progress-bar figma" role="progressbar" style="width: 0%" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
                                 </div>
