--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@
                   </div>
             </div>
             <div class="col-12 text-start pt-3">
-                <button type="submit" class="btn btn-primary" style="background-color: #000;">Sign in</button>
+                <button type="submit" class="btn btn-primary" style="background-color: #000;">Send It</button>
               </div>
             
         </div>
