--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                         <div class="content text-center">
                             <i class="fas fa-pen-nib"></i>
                             <h3>UI/UX Desgin</h3>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est dolores maxime inventore consequatur corrupti minus assumenda perferendis, tempora, porro pariatur quidem qui odio aspernatur libero aperiam repellat ducimus neque vel!</p>
+                            <p>I can create your website prototype before development with attractive design.</p>
                         </div>
 
 
@@ -115,7 +115,7 @@
                         <div class="content text-center">
                             <i class="fas fa-code"></i>
                             <h3>Web Desgin</h3>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est dolores maxime inventore consequatur corrupti minus assumenda perferendis, tempora, porro pariatur quidem qui odio aspernatur libero aperiam repellat ducimus neque vel!</p>
+                            <p>I can make your landing pages,front-end design,UI development and static website with Html,Css,Javascript,Bootstrap and Jquery</p>
                         </div>
 
 
@@ -129,7 +129,7 @@
                         <div class="content text-center">
                             <i class="fab fa-codepen"></i>
                             <h3>Web Development</h3>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est dolores maxime inventore consequatur corrupti minus assumenda perferendis, tempora, porro pariatur quidem qui odio aspernatur libero aperiam repellat ducimus neque vel!</p>
+                            <p>I can change your static website to more functionable dynamic website with react.js</p>
                         </div>
 
 
